<resources>
    <string name="app_name">BookApp</string>
    <string name="book_list_title">My Books</string>
    <string name="edit_book">Edit</string>
    <string name="delete_book">Delete</string>
    <string name="add_book">Add Book</string>
    <string name="edit_book_title">Edit Book</string>
    <string name="save_book">Save</string>
    <string name="book_name">Name</string>
    <string name="book_author">Author</string>
    <string name="book_publishedDate">Published Date</string>
    <string name="book_isbn">ISBN</string>
    <string name="search_hint">Enter id to search books</string>
    <string name="no_search_result_hint">There is no book you are looking for</string>
</resources>