<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="android.view.View" />

        <variable
            name="book"
            type="com.example.bookapp.model.Book" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/appBarTitle"
                    style="@style/AppBar.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/edit_book_title"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/deleteBook"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginEnd="16dp"
                    android:background="@color/purple_200"
                    android:text="@string/delete_book"
                    android:textAllCaps="false"
                    android:visibility="@{book == null ? View.GONE : View.VISIBLE}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/bookTitle"
            style="@style/Book.Info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/book_name"
            app:layout_constraintBottom_toBottomOf="@+id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/title" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/title"
            style="@style/Book.Info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@{book.title}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/bookTitle"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
            tools:text="书名" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/bookAuthor"
            style="@style/Book.Info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/book_author"
            app:layout_constraintBottom_toBottomOf="@+id/author"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/author" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/author"
            style="@style/Book.Info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="6dp"
            android:text="@{book.author}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/bookAuthor"
            app:layout_constraintTop_toBottomOf="@+id/title"
            tools:text="作者" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/bookPublishedDate"
            style="@style/Book.Info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/book_publishedDate"
            app:layout_constraintBottom_toBottomOf="@+id/publishedDate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/publishedDate" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/publishedDate"
            style="@style/Book.Info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="6dp"
            android:text="@{book.publishedDate}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/bookPublishedDate"
            app:layout_constraintTop_toBottomOf="@+id/author"
            tools:text="发版年份" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/bookISBN"
            style="@style/Book.Info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/book_isbn"
            app:layout_constraintBottom_toBottomOf="@+id/isbn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/isbn" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/isbn"
            style="@style/Book.Info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="6dp"
            android:text="@{book.isbn}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/bookISBN"
            app:layout_constraintTop_toBottomOf="@+id/publishedDate"
            tools:text="ISBN字段" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/saveBook"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginHorizontal="100dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="100dp"
            android:background="@color/purple_200"
            android:text="@string/save_book"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@+id/isbn" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>